--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <div id="card">
     <div id="card-inside">
       <div class="wrap wishesFont">
-        <center style="font-size: 13px;">
+        <center style="font-size: 13px; font-family: 'Times New Roman', Times, serif;">
           <p>Happy 1 year potato .</p>
           <p> I'm actually very happy and don't know what to tell so guess I'll just yap. Alr lets start from the 2nd
             sem when we first met ? The akatsuki hoodie guy to metro travels to dilshuknagar. We both know college is
@@ -58,7 +58,7 @@
             which never comes)
           </p>
         </center>
-        <p class="signed">With lots of silliness
+        <p class="signed" style="font-family: 'Times New Roman', Times, serif;">With lots of silliness
           <br> Chip
         </p>
 
